--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -80,6 +80,7 @@
         <button type="button" data-type="heading" data-level="1">Überschrift 1</button>
         <button type="button" data-type="heading" data-level="2">Überschrift 2</button>
         <button type="button" data-type="heading" data-level="3">Überschrift 3</button>
+        <button type="button" data-type="bloglist">Blogliste</button>
       </div>
     </div>
     <p id="content-error" class="text-small text-danger hidden"></p>
@@ -336,30 +337,38 @@
         const header = document.createElement('div');
         header.className = 'block-header';
 
-        const typeSelect = document.createElement('select');
-        typeSelect.className = 'block-type-select';
-        typeSelect.innerHTML = `
-          <option value="paragraph">Absatz</option>
-          <option value="heading-1">H1</option>
-          <option value="heading-2">H2</option>
-          <option value="heading-3">H3</option>
-          <option value="heading-4">H4</option>
-          <option value="heading-5">H5</option>
-          <option value="heading-6">H6</option>
-        `;
-        typeSelect.value = type === 'heading' ? `heading-${level}` : 'paragraph';
-        typeSelect.addEventListener('change', () => {
-          const val = typeSelect.value;
-          if (val === 'paragraph') {
-            block.dataset.type = 'paragraph';
-            delete block.dataset.level;
-          } else {
-            block.dataset.type = 'heading';
-            block.dataset.level = val.split('-')[1];
-          }
-          updateBlockStyling(block);
-        });
-        header.appendChild(typeSelect);
+        // Type selector (nur wenn nicht bloglist)
+        if (type !== 'bloglist') {
+          const typeSelect = document.createElement('select');
+          typeSelect.className = 'block-type-select';
+          typeSelect.innerHTML = `
+            <option value="paragraph">Absatz</option>
+            <option value="heading-1">H1</option>
+            <option value="heading-2">H2</option>
+            <option value="heading-3">H3</option>
+            <option value="heading-4">H4</option>
+            <option value="heading-5">H5</option>
+            <option value="heading-6">H6</option>
+          `;
+          typeSelect.value = type === 'heading' ? `heading-${level}` : 'paragraph';
+          typeSelect.addEventListener('change', () => {
+            const val = typeSelect.value;
+            if (val === 'paragraph') {
+              block.dataset.type = 'paragraph';
+              delete block.dataset.level;
+            } else {
+              block.dataset.type = 'heading';
+              block.dataset.level = val.split('-')[1];
+            }
+            updateBlockStyling(block);
+          });
+          header.appendChild(typeSelect);
+        } else {
+          const label = document.createElement('span');
+          label.className = 'block-type-label';
+          label.textContent = 'Blogliste';
+          header.appendChild(label);
+        }
 
         const actions = document.createElement('div');
         actions.className = 'block-item-actions';
@@ -391,9 +400,15 @@
         // Content area
         const content = document.createElement('div');
         content.className = 'block-content';
-        content.contentEditable = 'true';
-        content.dataset.placeholder = type === 'heading' ? 'Überschrift...' : 'Text eingeben...';
-        content.innerHTML = initialHtml;
+        if (type === 'bloglist') {
+          content.contentEditable = 'false';
+          content.className = 'block-content block-bloglist';
+          content.innerHTML = '<em style="color: #999;">Hier werden automatisch alle Blog-Posts aufgelistet</em>';
+        } else {
+          content.contentEditable = 'true';
+          content.dataset.placeholder = type === 'heading' ? 'Überschrift...' : 'Text eingeben...';
+          content.innerHTML = initialHtml;
+        }
         block.appendChild(content);
 
         updateBlockStyling(block);
@@ -591,20 +606,27 @@
 
         for (const block of blocks) {
           const type = block.dataset.type;
-          const contentEl = block.querySelector('.block-content');
-          const children = parseInlineNodes(contentEl);
 
-          if (type === 'heading') {
+          if (type === 'bloglist') {
             content.push({
-              type: 'heading',
-              level: parseInt(block.dataset.level, 10),
-              children
+              type: 'bloglist'
             });
           } else {
-            content.push({
-              type: 'paragraph',
-              children
-            });
+            const contentEl = block.querySelector('.block-content');
+            const children = parseInlineNodes(contentEl);
+
+            if (type === 'heading') {
+              content.push({
+                type: 'heading',
+                level: parseInt(block.dataset.level, 10),
+                children
+              });
+            } else {
+              content.push({
+                type: 'paragraph',
+                children
+              });
+            }
           }
         }
 
@@ -621,7 +643,7 @@
 
       const contentError = document.getElementById('content-error');
 
-      function buildInput() {
+      async function buildInput() {
         const content = getContentFromBlocks();
         if (content.length === 0) {
           contentError.textContent = 'Mindestens ein Block erforderlich';
@@ -629,6 +651,18 @@
           throw new Error('Mindestens ein Content-Block erforderlich');
         }
         contentError.classList.add('hidden');
+
+        // Load posts if bloglist block is present
+        let posts = [];
+        const hasBloglist = content.some(block => block.type === 'bloglist');
+        if (hasBloglist) {
+          try {
+            const response = await App.getPosts();
+            posts = response.posts || [];
+          } catch (err) {
+            console.warn('Failed to load posts for bloglist:', err);
+          }
+        }
 
         let navigation = null;
         if (navEnabled.checked) {
@@ -656,6 +690,7 @@
           footer,
           css,
           icons: [],
+          posts,
           allowPagination: allowPaginationCheckbox.checked,
           buildId: crypto.randomUUID(),
           pageType: pageTypeSelect.value,
@@ -723,7 +758,7 @@
         hideMessage();
 
         try {
-          const input = buildInput();
+          const input = await buildInput();
           const result = await App.publish(input);
 
           if (result.pageCount && result.pageCount > 1) {
@@ -763,7 +798,7 @@
       // Auto-update byte counter on content changes
       const debouncedPreview = debounce(async () => {
         try {
-          const input = buildInput();
+          const input = await buildInput();
           const result = await App.preview(input);
           updateByteCounter(result.bytes, result.overheadBytes || 0);
 
