feat: Enhance navigation editor layout with flexbox for improved alignment

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -53,8 +53,10 @@
             <p id="nav-global-hint" class="override-hint">✓ Globale Navigation wird verwendet</p>
           </div>
           <div id="nav-editor" class="override-editor hidden">
-            <div id="nav-links" class="nav-links"></div>
-            <button type="button" id="add-nav-link" class="btn-small btn-secondary">+ Link</button>
+            <div class="nav-editor-row">
+              <div id="nav-links" class="nav-links"></div>
+              <button type="button" id="add-nav-link" class="btn-small btn-secondary">+ Link</button>
+            </div>
           </div>
         </div>
       </div>
